DEvelopeed the API to create folder, Update the user schema
